<resources>
    <string name="app_name">HabitTrackerApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="type_habit_name">Type habit name</string>
    <string name="habit_name">habit name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="right">-></string>
    <string name="left"><![CDATA[<-]]></string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thur">THUR</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
</resources>